$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-26 (opened March 23, 2011)

	* anova.ccabyaxis: I (JO) noticed in an ORDNEWS message that
	anova(..., by = "axis") ignores the original Conditions in partial
	models and so gives wrong results in partial models. The fix finds
	the conditioning matrix as qr.X(object$pCCA$QR), and uses this as
	a Condition in updated models. Added a regression test that checks
	that statistics and residual df match.

Version 1.18-25 (closed March 23, 2011)

	* ordilabel: gained argument 'xpd' to draw labels outside the plot
	region. 

	* ordisurf: got a formula interface as an alternative to define
	the model. Also now accepts `gam()` argument `select` to add an
	extra penalty to smooths so they can be penalized to zero (i.e.
	removed from the model). This is a form of model selection.
	Estimation of smoothing parameters can now be determined via
	argument `method`. Both `select` and `method` have been set to
	defaults that were implied in previous versions of the function.
	If smooth is penalized to (effectively) 0, countour plotting is
	suppressed. New argument `gamma` can be used to increase the cost
	of each degree of freedom used by a model in the GCV or UBRE/AIC
	scores used in smoothness selection. New argument `plot` can be
	used to stop ordisurf producing any graphical output.
	A plot method is now provided that can draw contour or perspective
	plots of ordisurf results, or plot the fitted GAM surface.

	* metaMDSrotate: can now rotate > 2-dim solutions so that the
	first axis is parallel to a given vector and all others are
	orthogonal to the vector (and rotated to PC if they were
	originally). Earlier had argument 'choices' which was supposed to
	select only two axes to be rotated (but failed before rev 1533),
	but now lost 'choices' and always uses all dimensions, and
	orthogonalies dim 2 and beyond against the given vector. There was